syntax = "proto3";

package task_service;

option go_package = "task_service/;task_servicepb";

message TaskID {
    string id = 1;
}

message TaskContent {
    string title = 2;
    string description = 3;
    string status = 4;
    string creator_username = 5;
}

message Task {
    TaskID id = 1;
    TaskContent task = 2;
}

message TaskList {
    repeated Task tasks = 1;
    int32 pageSize = 3;
}

message RequestByID {
    TaskID id = 1;
    string requestor_username = 2;
}

message TaskPageRequest {
    string requestor_username = 1;
    int32 offset = 2;
    int32 pageSize = 3;
}

service TaskService {
    rpc CreateTask (TaskContent) returns (TaskID) {}
    rpc UpdateTask (Task) returns (TaskID) {}
    rpc DeleteTask (RequestByID) returns (TaskID) {}
    rpc GetTaskById (RequestByID) returns (Task) {}
    rpc GetTaskList (TaskPageRequest) returns (TaskList) {}
}
